HOSTING/GAMES/Minecraft/MINE.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: minecraft
  labels:
    app: minecraft
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: minecraft
        tipo: deploy
        version: "0.0.0"
    spec:
      containers:
        - name: spigot
          image: redxlus/minecraft-server
          ports:
          - containerPort: 25565
            name: mine
          volumeMounts:
          - name: properties
            mountPath: /server.properties
            subPath: server.properties
          - name: world
            mountPath: /world
      volumes:
      - name: properties
        secret:
         secretName: serverpp  # kubectl create secret generic serverpp --from-file=server.properties
      - name: world
        persistentVolumeClaim:
         claimName: world-minecraft

         
---
kind: Service
apiVersion: v1
metadata:
  name: loadbalancer-minecraft
spec:
  type: LoadBalancer
  selector:
    app: minecraft
    tipo: deploy
    version: "0.0.0"
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
      name: http
      
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-service
spec:
  ports:
  - name: minecraft
    targetPort: 25565
    port: 25565
  selector:
    app: minecraft
    tipo: deploy
    version: "0.0.0"
