HOSTING/GAMES/Minecraft/FINAL-MINECRAFT.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minecraft-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: server2.ludiba.org
    http:
      paths:
      - path: /
        backend:
          serviceName: minecraft-service
          servicePort: minecraft

---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-service
spec:
  ports:
  - name: minecraft
    targetPort: 25565
    port: 25565
  selector:
    app: minecraft
    tipo: deploy
    version: "0.0.0"

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: minecraft
  labels:
    app: minecraft
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: minecraft
        tipo: deploy
        version: "0.0.0"
    spec:
      containers:
        - name: spigot
          image: redxlus/minecraft-server
          ports:
          - containerPort: 25565
            name: mine
          volumeMounts:
          - name: properties
            mountPath: /server.properties
            subPath: server.properties
          - name: world
            mountPath: /world
      volumes:
      - name: properties
        secret:
         secretName: serverpp
      - name: world
        persistentVolumeClaim:
         claimName: world-minecraft
