HOSTING/GAMES/Minecraft/PRUEBA-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minecraft-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: server2.ludiba.org
    http:
      paths:
      - path: /
        backend:
          serviceName: minecraft-service
          servicePort: minecraft
